# cligen

./: .gitignore  CLIGEN_VERSION  CMakeLists.txt  README.md  cligen_expand.c
apps/: CMakeLists.txt
cligen/: CMakeLists.txt
cligen/include/: CMakeLists.txt  cligen_config.h.in
cligen/src/: CMakeLists.txt
cmake/: build_options_info.cmake  compile_options_info.cmake  host_info.cmake  maintainer_mode.cmake  version.cmake
lib/: CMakeLists.txt
lib/cligen/: CMakeLists.txt
lib/src/: CMakeLists.txt  build.c.in  cligen_config.h.in  cligen_match.c
test/: CMakeLists.txt  test_commands.sh
